code for generating basic structure

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
     "cSpell.words": [
         "Codegen",
+        "add",
         "data",
         "decr",
+        "defn",
         "deriving",
         "generalised",
         "haskeline",
