call with constant

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "defn",
         "deriving",
         "externf",
+        "foldr",
         "generalised",
         "haskeline",
         "intpr",
